kuber/deployment-pg.yml
apiVersion: v1
kind: Service
metadata:
  name: hs-svc-pg
spec:
  selector:
    app: hs-dep-pg
  ports:
    - port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hs-pg
  labels:
    app: hs-pg
spec:
  replicas: 1
  minReadySeconds: 10
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: hs-dep-pg
  template:
    metadata:
      labels:
        app: hs-dep-pg
    spec:
      containers:
        - name: hs-back
          image: myexeym/hs-pg:latest
          ports:
            - containerPort: 5432
