kuber/service-back.yml
apiVersion: v1
kind: Service
metadata:
  name: hs-service-back
spec:
  selector:
    app: hs-dep-back
  ports:
    - port: 3001
      targetPort: 3000
  type: LoadBalancer
