kuber/service-front.yml
apiVersion: v1
kind: Service
metadata:
  name: hs-service-front
spec:
  selector:
    app: hs-dep-front
  ports:
    - port: 8000
      targetPort: 8585
  type: LoadBalancer

#apiVersion: v1
#kind: Service
#metadata:
#  name: hs-service-front
#spec:
#  selector:
#    app: hs-dep-front
#  ports:
#    - protocol: TCP
#      port: 8000
#      targetPort: 8585
#  type: NodePort
